wip: view and register alias finished

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -38,7 +38,7 @@
     </div>
     <a
       class="avatar-container"
-      [routerLink]="['set-account-info']"
+      [routerLink]="['set-account-profile']"
     >
       <canvas *ngIf="!avatarImgSrc" #avatar></canvas>
       <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
