wip: alias sale working

--- a/web/angular-wallet/src/app/components/amount-input/amount-input.component.html
+++ b/web/angular-wallet/src/app/components/amount-input/amount-input.component.html
@@ -11,7 +11,7 @@
   >
   <mat-icon
     class="all-icon"
-    *ngIf="!disabled"
+    *ngIf="!disabled && maxAmount"
     matSuffix
     matTooltip="{{'spend_all' | i18n}}"
     (click)="onSpendAll()"
