--- a/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
@@ -3,7 +3,7 @@
 </h2>
 <div class="pin-container">
     <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="{{'enter_pin' | i18n}}" [(ngModel)]="pin">
+        <input matInput type="password" autocomplete="off" placeholder="{{'enter_pin' | i18n}}" [(ngModel)]="pin">
     </mat-form-field>
 </div>
 <small>
