--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -5,6 +5,10 @@
   width: 100%;
   background-color: #E8F3FF;
 
+  .nav-button {
+    cursor: pointer;
+  }
+
   .content-container {
     position: relative;
     display: flex;
