--- a/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
@@ -13,7 +13,7 @@
       <mat-step>
         <ng-template matStepLabel>{{ 'verify_alias' | i18n }}</ng-template>
         <div class="step-container">
-          <app-add-alias-verify-alias></app-add-alias-verify-alias>
+          <app-add-alias-verify-alias [account]="account"></app-add-alias-verify-alias>
         </div>
       </mat-step>
       <mat-step>
