--- a/web/angular-wallet/src/app/main/aliases/edit-alias/edit-alias-form/edit-alias-form.component.html
+++ b/web/angular-wallet/src/app/main/aliases/edit-alias/edit-alias-form/edit-alias-form.component.html
@@ -1,7 +1,7 @@
 <div class="account-info pl-20 pr-20 mb-8">
   <div class="account-info__field">
-    <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
-    <p class="pb-8">{{account.accountRS}}</p>
+    <small class="secondary-text text-uppercase">{{'owner'| i18n}}</small>
+    <p class="pb-8">{{alias.accountRS}}</p>
     <ng-container *ngIf="alias">
       <small class="secondary-text text-uppercase">{{'alias'| i18n}}</small>
         <p>{{alias.aliasName}}
