--- a/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
@@ -1,6 +1,6 @@
 <app-page [title]="'block_details' | i18n"
           [subtitle]="block.block"
-          [breadcrumbs]="[{label:'blocks_details' | i18n, path: '/blocks'}]"
+          [breadcrumbs]="[{label:'blocks' | i18n, path: '/blocks'}]"
           [wide]="true"
 >
   <div class="info table">
