--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -105,6 +105,7 @@
   </mat-table>
 
   <mat-paginator
+    *ngIf="dataSource.data.length > 0"
     #paginator
     [pageSize]="10"
     [pageSizeOptions]="[10, 20, 50]"
