--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -8,6 +8,10 @@
   .nav-button {
     cursor: pointer;
   }
+  .nav-label {
+    position: relative;
+    top: -2px;
+  }
 
   .content-container {
     position: relative;
