Fully Fledged Aliases  (#1703)
* chore: added signumswap to token table

* wip: new alias table

* wip: alias editor done

* wip: view and register alias finished

* wip: alias sale working

* wip: added cancel sale and buy alias

* wip: improved alias actions, added global back/forward navgation

* chore: minor thing

* fix: account stuff

--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -5,6 +5,14 @@
   width: 100%;
   background-color: #E8F3FF;
 
+  .nav-button {
+    cursor: pointer;
+  }
+  .nav-label {
+    position: relative;
+    top: -2px;
+  }
+
   .content-container {
     position: relative;
     display: flex;
