chore: update translations

--- a/web/angular-wallet/src/app/main/aliases/sell-alias/sell-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/sell-alias/sell-alias.component.html
@@ -18,7 +18,9 @@
 
 
     <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="isPrivateOffer"
-                  name="showMessage">{{ "is_private_offer_q" | i18n }}</mat-checkbox>
+                  name="showMessage">{{ "is_private_offer_q" | i18n }}
+    <mat-icon class="ml-8 s-16 secondary-text" matTooltip="{{'is_private_offer_hint' | i18n}}">info</mat-icon>
+    </mat-checkbox>
 
     <ng-container *ngIf="isPrivateOffer">
       <recipient-input [recipientValue]="recipient.addressRaw"
