--- a/web/angular-wallet/src/app/main/aliases/sell-alias/sell-alias.component.scss
+++ b/web/angular-wallet/src/app/main/aliases/sell-alias/sell-alias.component.scss
@@ -2,6 +2,12 @@
 
 :host {
 
+  .inline {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .header {
     display: flex;
     flex-direction: row;
