feat: sends signa on token transfer

--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -12,6 +12,17 @@
                     [disabled]="immutable">
   </app-amount-input>
 
+
+  <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="shouldSendSigna"
+                name="showMessage">{{ "send_signa" | i18n }}
+  </mat-checkbox>
+  <ng-container *ngIf="shouldSendSigna">
+    <app-amount-input [maxAmount]="balances.availableBalance.getSigna()"
+                      [(amount)]="signa"
+                      [disabled]="immutable">
+    </app-amount-input>
+  </ng-container>
+
   <app-fee-input *ngIf="!immutable"
                  [type]="type"
                  [subtype]="subtype"
