--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -49,14 +49,14 @@
 
   <app-submit-transaction [disabled]="!canSubmit()"
                           [isSubmitting]="isSubmitting"
-                          [(pin)] = "pin"
+                          [(pin)]="pin"
   >
   </app-submit-transaction>
   <div class="inlined">
     <div class="total">
       <strong>{{'total' | i18n}}:&nbsp;</strong>
-      <span [class.error-text]="!hasSufficientQuantity()">{{this.token.name}} {{ this.getQuantity() }} </span>
-      <small [class.error-text]="!hasSufficientBalance()">{{ this.fee | amount:'signa'}}</small>
+      <span [class.error-text]="!hasSufficientQuantity()">{{token.name}} {{ getQuantity() }} </span> -
+      <span [class.error-text]="!hasSufficientBalance()">{{ getSignaTotal().getSigna() | amount:'signa'}}</span>
     </div>
     <div>
       <span class="error-text">{{getErrorHint()}}</span>
