--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -12,6 +12,17 @@
                     [disabled]="immutable">
   </app-amount-input>
 
+
+  <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="shouldSendSigna"
+                name="showMessage">{{ "send_signa" | i18n }}
+  </mat-checkbox>
+  <ng-container *ngIf="shouldSendSigna">
+    <app-amount-input [maxAmount]="balances.availableBalance.getSigna()"
+                      [(amount)]="signa"
+                      [disabled]="immutable">
+    </app-amount-input>
+  </ng-container>
+
   <app-fee-input *ngIf="!immutable"
                  [type]="type"
                  [subtype]="subtype"
@@ -38,14 +49,14 @@
 
   <app-submit-transaction [disabled]="!canSubmit()"
                           [isSubmitting]="isSubmitting"
-                          [(pin)] = "pin"
+                          [(pin)]="pin"
   >
   </app-submit-transaction>
   <div class="inlined">
     <div class="total">
       <strong>{{'total' | i18n}}:&nbsp;</strong>
-      <span [class.error-text]="!hasSufficientQuantity()">{{this.token.name}} {{ this.getQuantity() }} </span>
-      <small [class.error-text]="!hasSufficientBalance()">{{ this.fee | amount:'signa'}}</small>
+      <span [class.error-text]="!hasSufficientQuantity()">{{token.name}} {{ getQuantity() }} </span> -
+      <span [class.error-text]="!hasSufficientBalance()">{{ getSignaTotal().getSigna() | amount:'signa'}}</span>
     </div>
     <div>
       <span class="error-text">{{getErrorHint()}}</span>
