--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -24,14 +24,15 @@
       </div>
 
       <button mat-button [matMenuTriggerFor]="profileMenu" class="action-button">
-        <span fxLayout="row" fxLayoutAlign="center center"  matTooltip="{{'select_profile' | i18n}}">
+        <span fxLayout="row" fxLayoutAlign="center center" matTooltip="{{'select_profile' | i18n}}">
           <mat-icon class="secondary-text">{{selectedProfile.icon}}</mat-icon>
           <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
         </span>
       </button>
 
       <mat-menu #profileMenu="matMenu" [overlapTrigger]="false">
-        <button *ngFor="let profile of profiles" mat-menu-item (click)="setProfile(profile.name)" matTooltip="{{profile.description | i18n}}">
+        <button *ngFor="let profile of profiles" mat-menu-item (click)="setProfile(profile.name)"
+                matTooltip="{{profile.description | i18n}}">
                   <span class="profile mr-12">
                     <mat-icon class="profile-type-icon">{{profile.icon}}</mat-icon>
                     {{profile.name | i18n}}
@@ -44,47 +45,21 @@
 
       <button mat-button [matMenuTriggerFor]="userMenu"
               class="action-button">
-        <div fxLayout="row" fxLayoutAlign="center center">
-                    <span class="username mr-12" fxHide fxShow.gt-xs>
-                        <ng-container *ngIf="selectedAccount.type === 'offline'">
-                            <mat-icon class="account-type-icon" matTooltip="{{'hint_offline_account' | i18n}}">remove_red_eye</mat-icon>
-                        </ng-container>
-                        <ng-container *ngIf="selectedAccount.type !== 'offline' && selectedAccount.confirmed">
-                            <mat-icon class="account-type-icon" matTooltip="{{'hint_online_account' | i18n}}">verified_user</mat-icon>
-                        </ng-container>
-                        <ng-container *ngIf="selectedAccount.type !== 'offline' && !selectedAccount.confirmed">
-                            <mat-icon class="account-type-icon"
-                                      matTooltip="{{'error_no_public_key' | i18n}}">lock_open</mat-icon>
-                        </ng-container>
-                      {{selectedAccount.name || selectedAccount.accountRS}}
-                    </span>
+        <div fxLayout="row h-64" fxLayoutAlign="center center">
+          <app-account-selector-item [account]="selectedAccount"></app-account-selector-item>
           <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
         </div>
       </button>
 
       <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-
-        <button *ngFor="let account of accounts" mat-menu-item class="" (click)="setAccount(account)">
-                    <span *ngIf="account" class="username mr-12">
-                        <ng-container *ngIf="account.type === 'offline'">
-                            <mat-icon class="account-type-icon" matTooltip="{{'hint_offline_account' | i18n}}">remove_red_eye</mat-icon>
-                        </ng-container>
-                        <ng-container *ngIf="account.type !== 'offline' && account.confirmed">
-                            <mat-icon class="account-type-icon" matTooltip="{{'hint_online_account' | i18n}}">verified_user</mat-icon>
-                        </ng-container>
-                        <ng-container *ngIf="account.type !== 'offline' && !account.confirmed">
-                            <mat-icon class="account-type-icon"
-                                      matTooltip="{{'error_no_public_key' | i18n}}">lock_open</mat-icon>
-                        </ng-container>
-                      {{account.name || account.accountRS}}
-                    </span>
-        </button>
-        <mat-divider></mat-divider>
         <button mat-menu-item class="manage-accounts" routerLink="/accounts">
           <mat-icon>people</mat-icon>
           <span>Manage Accounts</span>
         </button>
-
+        <mat-divider></mat-divider>
+        <button *ngFor="let account of accounts" mat-menu-item (click)="setAccount(account)">
+              <app-account-selector-item [account]="account"></app-account-selector-item>
+        </button>
       </mat-menu>
 
       <div class="toolbar-separator"></div>
